<resources>
    <string name="app_name">Posluga</string>
    <string name="web_client_id">262905056118-44611m6tji9ncqa5g4guaqh1lo5jf4r1.apps.googleusercontent.com</string>

    <!-- Login Fragment Special -->
    <string name="login_welcome_title_text">Welcome back to Posluga!</string>
    <string name="login_enter_credentials_text">Enter your email and password you used to register</string>
    <string name="login_password_recovery_text">Forgot Password?</string>
    <string name="login_sign_up_text">Don\'t have an account? Sign up</string>

    <!-- Password Recovery Fragment Special -->
    <string name="password_recovery_title">Recover your Posluga password</string>
    <string name="password_recovery_subtitle">Please enter your email</string>

    <!-- Register Fragment Special -->
    <string name="register_title_text">Sign up to Posluga!</string>
    <string name="register_second_title_text">Please enter your details</string>

    <!-- Edit Profile Fragment Special -->
    <string name="edit_text_phone_hint_text">Write your phone number: ex. 012 345 6789</string>
    <string name="edit_text_instagram_hint_text">Write you instagram tag</string>
    <string name="edit_text_telegram_hint_text">Write your telegram tag</string>
    <string name="button_remove_photo_text">Remove photo</string>

    <!-- Service and Project Fragment Special -->
    <string name="button_create_project_text">Create a project</string>
    <string name="button_create_service_text">Create a service</string>
    <string name="create_service_title_text">Create a service</string>
    <string name="service_title_text">Service title</string>
    <string name="create_service_subtitle_text">Write everything in detail</string>
    <string name="edit_text_service_title_hint">Write service title, ex. Math tutoring</string>
    <string name="description_text">Description</string>
    <string name="edit_text_service_description_hint">Write description, ex: I work with schoolchildren and studens</string>
    <string name="images_text">Images</string>
    <string name="category_text">Category</string>
    <string name="drop_down_menu_category_text">Choose category</string>
    <string name="subcategory_text">Subcategory</string>
    <string name="drop_down_menu_subcategory_text">Choose subcategory</string>
    <string name="state_text">State</string>
    <string name="drop_down_menu_state_text">Choose state</string>
    <string name="city_text">City</string>
    <string name="drop_down_menu_city_text">Choose city</string>
    <string name="edit_text_service_price_hint">Write price</string>
    <string name="price_text">Price</string>
    <string name="create_project_title_text">Create a project</string>
    <string name="create_project_subtitle_text">Write everything in detail</string>
    <string name="project_title_text">Project title</string>
    <string name="edit_text_project_title_hint">Write title, ex: I need to repaeir iPhone 11</string>
    <string name="edit_text_project_description_hint">Write description, ex: FaceID isn\'t working</string>


    <!-- General -->
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="name_text">Name</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="or_text">or</string>
    <string name="recover_text">Recover</string>
    <string name="phone_number_text">Phone number</string>
    <string name="telegram_text">Telegram</string>
    <string name="instagram_text">Instagram</string>
    <string name="update_profile_text">Update Profile</string>
    <string name="profile_text">Profile</string>
    <string name="menu_text">Menu</string>
    <string name="my_services_text">My services</string>
    <string name="my_projects_text">My projects</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="about_text">About</string>
    <string name="email_edit_text_hint">Write your email</string>
    <string name="password_edit_text_hint">Write you password</string>
    <string name="name_edit_text_hint">Write your name</string>
    <string name="phone_text">Mobile Phone</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox_search_description">Search in description</string>
    <string name="edit_text_max_price_hint">Max price</string>
    <string name="edit_text_min_price_hint">Min price</string>
    <string name="open_user_profile_text">Open user profile</string>
    <string name="no_reviews_text">We find 0 reviews =(</string>
    <string name="no_services_text">We find 0 services =(</string>
    <string name="no_projects_text">We find 0 project =(</string>
    <string name="create_review_title">Write a review</string>
    <string name="create_review_subtitle">Write everything in detail</string>
    <string name="button_write_review_text">Write review</string>
    <string name="rating_text">Rating</string>
    <string name="no_saved_text">You don\'t have saved posts =(</string>
    <string name="menu_edit_text">Edit</string>
    <string name="menu_delete_text">Delete</string>
    <string name="edit_service_title_text">Edit a service</string>
    <string name="edit_service_subtitle_text">Write everything in detail</string>
    <string name="button_edit_service_text">Update service</string>
    <string name="button_edit_project_text">Update a project</string>
    <string name="edit_project_title_text">Edit a project</string>
    <string name="no_chats_text">We find 0 chats =(</string>
    <string name="no_messages_text">No messages right now</string>
    <string name="edit_text_message_text">Type your message...</string>
    <string name="button_open_chat_text">Open chat</string>
    <string name="menu_tex">Menu</string>
    <string name="chats_text">Chats</string>
    <string name="create_text">Create</string>
    <string name="saved_text">Saved</string>
    <string name="home_text">Home</string>
    <string name="services_text">Services</string>
    <string name="projects_text">Projects</string>
    <string name="button_back_text">Go back</string>
    <string name="tradeble_price">Contract price</string>
    <string name="user_profile_picture">User profile picture</string>

</resources>